--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,3 +1,6 @@
+/* * {
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+} */
 
 .react-player video {
   object-fit: cover;
